--- a/src/components/UI/Counter/Counter.module.css
+++ b/src/components/UI/Counter/Counter.module.css
@@ -3,8 +3,8 @@
   align-items: center;
 }
 
-.Add,
-.Sub {
+.Sub,
+.Add {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -13,7 +13,7 @@
   width: 36rem;
   height: 36rem;
   border-radius: 50%;
-  font-size: 24px;
+  font-size: 14px;
   padding: 0;
 }
 
@@ -21,6 +21,7 @@
   background-color: white;
   border: 1px solid black;
 }
+
 .count {
   font-size: 16px;
   margin: 0 5px;
