--- a/src/components/Meals/Meal/Meal.module.css
+++ b/src/components/Meals/Meal/Meal.module.css
@@ -1,6 +1,9 @@
 .Meal {
+  /*开启弹性盒*/
   display: flex;
+  /*设置辅轴对齐方式*/
   align-items: center;
+  /*设置外边距*/
   padding: 30rem 20rem;
   border-bottom: 1px #f2f2f2 solid;
 }
@@ -28,6 +31,7 @@ img {
 
 .PriceWrap {
   margin-top: 40rem;
+  padding-right: 40rem;
   display: flex;
   justify-content: space-between;
 }
