--- a/src/components/FilterMeals/FilterMeals.module.css
+++ b/src/components/FilterMeals/FilterMeals.module.css
@@ -25,10 +25,11 @@
   background-color: #f2f2f2;
   padding-left: 60rem;
   outline: none;
+  font-size: 32rem;
 }
 
 .SearchIcon {
-  font-size: 20px;
+  font-size: 40rem;
   position: absolute;
   left: 10rem;
   color: #aaa;
