--- a/src/components/Meals/Meal/Meal.module.css
+++ b/src/components/Meals/Meal/Meal.module.css
@@ -18,14 +18,14 @@ img {
 
 .Title {
   font-weight: normal;
-  font-size: 18px;
+  font-size: 36rem;
   margin: 0;
 }
 
 .Desc {
   margin: 0;
   color: #bbb;
-  font-size: 12px;
+  font-size: 24rem;
   padding-right: 40rem;
 }
 
@@ -38,10 +38,10 @@ img {
 
 .Price {
   font-weight: bold;
-  font-size: 18px;
+  font-size: 36rem;
 }
 
 .Price::before {
   content: '￥';
-  font-size: 12px;
+  font-size: 24rem;
 }
