--- a/src/components/Meals/Meal/MealItem.module.css
+++ b/src/components/Meals/Meal/MealItem.module.css
@@ -1,4 +1,4 @@
-.Meal {
+.MealItem {
   /*开启弹性盒*/
   display: flex;
   /*设置辅轴对齐方式*/
@@ -8,7 +8,7 @@
   border-bottom: 1px #f2f2f2 solid;
 }
 
-.ImgBox {
+.ImageWrapper {
   width: 280rem;
 }
 
@@ -16,20 +16,20 @@ img {
   width: 100%;
 }
 
-.Title {
+.Name {
   font-weight: normal;
   font-size: 36rem;
   margin: 0;
 }
 
-.Desc {
+.Description {
   margin: 0;
   color: #bbb;
   font-size: 24rem;
   padding-right: 40rem;
 }
 
-.PriceWrap {
+.PriceWrapper {
   margin-top: 40rem;
   padding-right: 40rem;
   display: flex;
