--- a/src/components/Meals/MealsList.module.css
+++ b/src/components/Meals/MealsList.module.css
@@ -3,6 +3,9 @@
   top: 120rem;
   bottom: 0;
   overflow: auto;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 160rem;
 }
 
 /* .MealsList {
